# agent-regression-lab

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CASE_STUDY.md  LINKEDIN_POST.md
output/playwright/: health-proof.html  ops-proof.html  product-proof.html
src/agent_regression_lab/: __init__.py  dashboard.html  main.py  repository.py  services.py
src/agent_regression_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py
